OxyMP/oxymp/meta-grammar.txt
/**
 * Derived from https://www.w3.org/TR/REC-xml/#sec-notation
**/

gramamr_rule ::= IDENT '=' choice

choice ::= list ('|' list)*

list ::= list_item+

list_item ::= (group | STRING | IDENT) ('?')?

group ::= '(' choice ')'

IDENT -> Rust identifier
STRING -> Rust string literal
